# Szachy

./: CMakeLists.txt  Chessboard.cpp  Chessboard.h  Data.cpp  Data.h  InputManager.cpp  InputManager.h  ModelManager.cpp  ModelManager.h  MoveChecker.cpp  MoveChecker.h  MovesList.cpp  MovesList.h  ProjectManager.cpp  ProjectManager.h  ViewConsole.cpp  ViewConsole.h  ViewManager.h  main.cpp
